--- a/service/pom.xml
+++ b/service/pom.xml
@@ -19,6 +19,7 @@
         <module>service-msm</module>
         <module>service-ucenter</module>
         <module>service-order</module>
+        <module>service_sta</module>
     </modules>
 
     <dependencies>
